infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: scrape.com
      http:
        paths:
          - pathType: Prefix
            path: "/api/?(.*)"
            backend:
              service:
                name: scrape-srv
                port:
                  number: 8080
          - pathType: Prefix
            path: /
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
